--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@ a:hover {
 <p>Hello. My name is Adam Haggi. I am currently a student. Today, i will be talking about Graffiti<br> <br>
     I have always been interested in graffiti. Driving by cities and seeing the various graffiti sprayed on the wall has always been intriguing to me, even if I may not be able to make out words or sentences. <br> <br>
     Graffiti has always been a constant of cities. There is no city I've been to that doesnt have some kind of graffiti. Even the cleanest of cities have no shortage of graffiti. It has always been a staple of city living, and I doubt that will ever change as long as cities are bustling. <br> <br>
-    Graffiti may usually be known for obstructions and obscenities, but alot of graffiti are genuine pieces of art that can be seen as, in a way, a love letter to the community. <br> <br>
+    Graffiti can be a double edged sword, as having the will to write on anything can inevitably end up as an obstruction. There are people who cover entire abandoned buildings in spray-paint, advertise themself, and write obscenities but alot of other graffiti are genuine pieces of art that can be seen as, in a way, a love letter to the community. Subway art, for example, is well known for colorful and otherwise symbolistic art drawn across an entire subway. <br> <br>
     I find this topic is very relevant, as I'm sure everybody knows well what graffiti is, but when was the last time you actually stopped and thinked about it? To most, graffiti is an inevitability and nothing more, but it can be seen as a lot more if performed correctly. I believe something great can come out of grafitti if the illustrator puts real dedication, care, and love into their work. <br> <br>
     </p>
     <li class="nav-item">
         <a class="nav-link" href="poem.html">If you're interested, feel free to check out my Found Poem</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="citation.html">You can also look at the citations here</a>
       </li>
 </div>
 
