--- a/citation.html
+++ b/citation.html
@@ -44,9 +44,12 @@ a:hover {
 <body>
 <div id="paragraph">
     <h1 style="text-align:center; padding:20; color:azure">Citations</h1>
-<p style="text-align:center; font-size:20px; font-family:Ubun">
+<p style="text-align:center; font-size:20px;">
   Banksy. Banksy Wall and Piece. Century, The Random House, 2005.
    </p>
+    <p style="text-align:center; font-size:20px;">
+    The Art Story. “Banksy.” The Art Story, The Art Story, 2011, www.theartstory.org/artist/banksy/.
+    </p>
    <li class="nav-item">
     <a style="text-align:center;" class="nav-link" href="index.html">Back</a>
   </li>
